add more swagger doc
